--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,10 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
     - name: Set up JDK 11
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3
       with:
         distribution: 'zulu'
         java-version: 11
@@ -30,7 +30,7 @@ jobs:
         server-password: GITHUB_TOKEN
 
     - name: Cache Local Maven Repo
-      uses: actions/cache@v2.1.2
+      uses: actions/cache@v3
       with:
         path: |
           ~/.m2/repository
@@ -54,15 +54,14 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
     - name: Prepare Version
       id: prep
-      run: |
-        echo ::set-output name=version::${GITHUB_REF#refs/tags/v}
+      run: echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
 
     - name: Set up JDK 11
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3
       with:
         distribution: 'zulu'
         java-version: 11
@@ -72,7 +71,7 @@ jobs:
         server-password: GITHUB_TOKEN
 
     - name: Cache Local Maven Repo
-      uses: actions/cache@v2.1.2
+      uses: actions/cache@v3
       with:
         path: |
           ~/.m2/repository
