--- a/feasibility-dsf-process-docker-test-setup/docker-compose.yml
+++ b/feasibility-dsf-process-docker-test-setup/docker-compose.yml
@@ -297,7 +297,7 @@ services:
 
   # ---- DIC-1 - FHIR Data Store ----------------------------------------------
   dic-1-store:
-    image: ghcr.io/rwth-imi/flare-query:1.0-rc11
+    image: ghcr.io/rwth-imi/flare-query:1.0.0
     restart: always
     ports:
     - "5000:8080"
