--- a/feasibility-dsf-process/pom.xml
+++ b/feasibility-dsf-process/pom.xml
@@ -112,6 +112,11 @@
             <version>0.9.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+          <groupId>com.github.ben-manes.caffeine</groupId>
+          <artifactId>caffeine</artifactId>
+          <version>3.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
