--- a/feasibility-dsf-process/pom.xml
+++ b/feasibility-dsf-process/pom.xml
@@ -117,6 +117,11 @@
           <artifactId>caffeine</artifactId>
           <version>3.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.bucket4j</groupId>
+            <artifactId>bucket4j-core</artifactId>
+            <version>8.2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -186,6 +191,10 @@
                                     <groupId>ca.uhn.hapi.fhir</groupId>
                                     <artifactId>hapi-fhir-client</artifactId>
                                 </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.bucket4j</groupId>
+                                    <artifactId>bucket4j-core</artifactId>
+                                </artifactItem>
                             </artifactItems>
                             <outputDirectory>../feasibility-dsf-process-docker-test-setup/dic-1/bpe/plugin
                             </outputDirectory>
@@ -220,6 +229,10 @@
                                 <artifactItem>
                                     <groupId>ca.uhn.hapi.fhir</groupId>
                                     <artifactId>hapi-fhir-client</artifactId>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.bucket4j</groupId>
+                                    <artifactId>bucket4j-core</artifactId>
                                 </artifactItem>
                             </artifactItems>
                             <outputDirectory>../feasibility-dsf-process-docker-test-setup/dic-2/bpe/plugin
@@ -256,6 +269,10 @@
                                     <groupId>ca.uhn.hapi.fhir</groupId>
                                     <artifactId>hapi-fhir-client</artifactId>
                                 </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.bucket4j</groupId>
+                                    <artifactId>bucket4j-core</artifactId>
+                                </artifactItem>
                             </artifactItems>
                             <outputDirectory>../feasibility-dsf-process-docker-test-setup/dic-3/bpe/plugin
                             </outputDirectory>
@@ -291,6 +308,10 @@
                                     <groupId>ca.uhn.hapi.fhir</groupId>
                                     <artifactId>hapi-fhir-client</artifactId>
                                 </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.bucket4j</groupId>
+                                    <artifactId>bucket4j-core</artifactId>
+                                </artifactItem>
                             </artifactItems>
                             <outputDirectory>../feasibility-dsf-process-docker-test-setup/dic-4/bpe/plugin
                             </outputDirectory>
@@ -325,6 +346,10 @@
                                 <artifactItem>
                                     <groupId>ca.uhn.hapi.fhir</groupId>
                                     <artifactId>hapi-fhir-client</artifactId>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.bucket4j</groupId>
+                                    <artifactId>bucket4j-core</artifactId>
                                 </artifactItem>
                             </artifactItems>
                             <outputDirectory>../feasibility-dsf-process-docker-test-setup/zars/bpe/plugin
