--- a/feasibility-dsf-process-tools/feasibility-dsf-process-test-data-generator/pom.xml
+++ b/feasibility-dsf-process-tools/feasibility-dsf-process-test-data-generator/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>de.medizininformatik-initiative</groupId>
         <artifactId>feasibility-dsf-process-tools</artifactId>
-        <version>0.5.0</version>
+        <version>develop</version>
     </parent>
 
     <name>MII Feasibility Process Test Data Generator</name>
