--- a/feasibility-dsf-process-tools/pom.xml
+++ b/feasibility-dsf-process-tools/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>de.medizininformatik-initiative</groupId>
         <artifactId>feasibility-dsf-process-parent</artifactId>
-        <version>0.5.0</version>
+        <version>develop</version>
     </parent>
 
     <modules>
