--- a/feasibility-dsf-process/pom.xml
+++ b/feasibility-dsf-process/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>feasibility-dsf-process</artifactId>
-    <version>0.5.0</version>
+    <version>develop</version>
 
     <parent>
         <groupId>de.medizininformatik-initiative</groupId>
         <artifactId>feasibility-dsf-process-parent</artifactId>
-        <version>0.5.0</version>
+        <version>develop</version>
     </parent>
 
     <name>MII Feasibility DSF Process</name>
