--- a/feasibility-dsf-process-tools/feasibility-dsf-process-test-data-generator/pom.xml
+++ b/feasibility-dsf-process-tools/feasibility-dsf-process-test-data-generator/pom.xml
@@ -22,11 +22,11 @@
             <artifactId>crypto-utils</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.highmed.dsf</groupId>
+            <groupId>dev.dsf</groupId>
             <artifactId>dsf-fhir-rest-adapter</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.highmed.dsf</groupId>
+            <groupId>dev.dsf</groupId>
             <artifactId>dsf-fhir-server</artifactId>
             <exclusions>
                 <exclusion>
