--- a/feasibility-dsf-process-tools/pom.xml
+++ b/feasibility-dsf-process-tools/pom.xml
@@ -24,18 +24,18 @@
             <dependency>
                 <groupId>de.hs-heilbronn.mi</groupId>
                 <artifactId>crypto-utils</artifactId>
-                <version>3.0.0</version>
+                <version>3.7.0</version>
             </dependency>
 
             <dependency>
-                <groupId>org.highmed.dsf</groupId>
+                <groupId>dev.dsf</groupId>
                 <artifactId>dsf-fhir-rest-adapter</artifactId>
-                <version>0.9.0</version>
+                <version>1.0.0</version>
             </dependency>
             <dependency>
-                <groupId>org.highmed.dsf</groupId>
+                <groupId>dev.dsf</groupId>
                 <artifactId>dsf-fhir-server</artifactId>
-                <version>0.9.0</version>
+                <version>1.0.0</version>
             </dependency>
 
         </dependencies>
