--- a/feasibility-dsf-process/pom.xml
+++ b/feasibility-dsf-process/pom.xml
@@ -16,9 +16,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.highmed.dsf</groupId>
-            <artifactId>dsf-bpe-process-base</artifactId>
-            <version>0.9.0</version>
+            <groupId>dev.dsf</groupId>
+            <artifactId>dsf-bpe-process-api-v1</artifactId>
+            <version>1.0.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -69,47 +69,37 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <version>2.7.5</version>
+            <version>3.1.1</version>
             <scope>test</scope>
-            <exclusions>
-                <!--
-                    Needs to be excluded. Otherwise, an error regarding incompatible log4j dependencies is thrown.
-                    This avoid them being loaded both.
-                -->
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-logging</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>6.0.10</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>testcontainers</artifactId>
-            <version>1.16.2</version>
+            <version>1.18.3</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>nginx</artifactId>
-            <version>1.16.3</version>
+            <version>1.18.3</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>1.16.2</version>
+            <version>1.18.3</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>de.hs-heilbronn.mi</groupId>
-            <artifactId>log4j2-utils</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.highmed.dsf</groupId>
+            <groupId>dev.dsf</groupId>
             <artifactId>dsf-fhir-validation</artifactId>
-            <version>0.9.0</version>
+            <version>1.0.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -159,6 +149,20 @@
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.5.0</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <executions>
                     <execution>
@@ -176,27 +180,6 @@
                                 </artifactItem>
                             </artifactItems>
                             <outputDirectory>../feasibility-dsf-process-docker-test-setup/dic-1/bpe/process
-                            </outputDirectory>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>copy-hapi-fhir-client-to-dic-1</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>copy</goal>
-                        </goals>
-                        <configuration>
-                            <artifactItems>
-                                <artifactItem>
-                                    <groupId>ca.uhn.hapi.fhir</groupId>
-                                    <artifactId>hapi-fhir-client</artifactId>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>com.bucket4j</groupId>
-                                    <artifactId>bucket4j-core</artifactId>
-                                </artifactItem>
-                            </artifactItems>
-                            <outputDirectory>../feasibility-dsf-process-docker-test-setup/dic-1/bpe/plugin
                             </outputDirectory>
                         </configuration>
                     </execution>
@@ -219,27 +202,6 @@
                         </configuration>
                     </execution>
                     <execution>
-                        <id>copy-hapi-fhir-client-to-dic-2</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>copy</goal>
-                        </goals>
-                        <configuration>
-                            <artifactItems>
-                                <artifactItem>
-                                    <groupId>ca.uhn.hapi.fhir</groupId>
-                                    <artifactId>hapi-fhir-client</artifactId>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>com.bucket4j</groupId>
-                                    <artifactId>bucket4j-core</artifactId>
-                                </artifactItem>
-                            </artifactItems>
-                            <outputDirectory>../feasibility-dsf-process-docker-test-setup/dic-2/bpe/plugin
-                            </outputDirectory>
-                        </configuration>
-                    </execution>
-                    <execution>
                         <id>copy-process-plugin-to-dic-3</id>
                         <phase>package</phase>
                         <goals>
@@ -254,27 +216,6 @@
                                 </artifactItem>
                             </artifactItems>
                             <outputDirectory>../feasibility-dsf-process-docker-test-setup/dic-3/bpe/process
-                            </outputDirectory>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>copy-hapi-fhir-client-to-dic-3</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>copy</goal>
-                        </goals>
-                        <configuration>
-                            <artifactItems>
-                                <artifactItem>
-                                    <groupId>ca.uhn.hapi.fhir</groupId>
-                                    <artifactId>hapi-fhir-client</artifactId>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>com.bucket4j</groupId>
-                                    <artifactId>bucket4j-core</artifactId>
-                                </artifactItem>
-                            </artifactItems>
-                            <outputDirectory>../feasibility-dsf-process-docker-test-setup/dic-3/bpe/plugin
                             </outputDirectory>
                         </configuration>
                     </execution>
@@ -297,27 +238,6 @@
                         </configuration>
                     </execution>
                     <execution>
-                        <id>copy-hapi-fhir-client-to-dic-4</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>copy</goal>
-                        </goals>
-                        <configuration>
-                            <artifactItems>
-                                <artifactItem>
-                                    <groupId>ca.uhn.hapi.fhir</groupId>
-                                    <artifactId>hapi-fhir-client</artifactId>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>com.bucket4j</groupId>
-                                    <artifactId>bucket4j-core</artifactId>
-                                </artifactItem>
-                            </artifactItems>
-                            <outputDirectory>../feasibility-dsf-process-docker-test-setup/dic-4/bpe/plugin
-                            </outputDirectory>
-                        </configuration>
-                    </execution>
-                    <execution>
                         <id>copy-process-plugin-to-zars</id>
                         <phase>package</phase>
                         <goals>
@@ -332,27 +252,6 @@
                                 </artifactItem>
                             </artifactItems>
                             <outputDirectory>../feasibility-dsf-process-docker-test-setup/zars/bpe/process
-                            </outputDirectory>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>copy-hapi-fhir-client-to-zars</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>copy</goal>
-                        </goals>
-                        <configuration>
-                            <artifactItems>
-                                <artifactItem>
-                                    <groupId>ca.uhn.hapi.fhir</groupId>
-                                    <artifactId>hapi-fhir-client</artifactId>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>com.bucket4j</groupId>
-                                    <artifactId>bucket4j-core</artifactId>
-                                </artifactItem>
-                            </artifactItems>
-                            <outputDirectory>../feasibility-dsf-process-docker-test-setup/zars/bpe/plugin
                             </outputDirectory>
                         </configuration>
                     </execution>
@@ -452,4 +351,13 @@
             </plugin>
         </plugins>
     </build>
+    <dependencyManagement>
+      <dependencies>
+        <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-beans</artifactId>
+          <version>6.0.10</version>
+        </dependency>
+      </dependencies>
+    </dependencyManagement>
 </project>
