--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>de.medizininformatik-initiative</groupId>
     <artifactId>feasibility-dsf-process-parent</artifactId>
-    <version>develop</version>
+    <version>0.0.0.0</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -16,7 +16,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <compileSource>17</compileSource>
         <compileTarget>17</compileTarget>
-
+        <dsf.version>1.1.0</dsf.version>
         <hapi.fhir.version>5.1.0</hapi.fhir.version>
     </properties>
 
