--- a/feasibility-dsf-process-docker-test-setup/docker-compose.yml
+++ b/feasibility-dsf-process-docker-test-setup/docker-compose.yml
@@ -94,10 +94,10 @@ services:
 
   # ---- ZARS - FHIR Inbox ----------------------------------------------------
   zars-fhir-app:
-    image: ghcr.io/datasharingframework/fhir:1.1.0
+    image: ghcr.io/datasharingframework/fhir:1.3.0
     restart: on-failure
     healthcheck:
-      test: [ "CMD", "java", "-cp", "dsf_status_client.jar", "dev.dsf.common.status.client.StatusClient" ]
+      test: [ "CMD-SHELL", "./healthcheck.sh" ]
       interval: 10s
       timeout: 15s
       retries: 5
@@ -163,10 +163,10 @@ services:
 
   # ---- ZARS - BPE -----------------------------------------------------------
   zars-bpe-app:
-    image: ghcr.io/datasharingframework/bpe:1.1.0
+    image: ghcr.io/datasharingframework/bpe:1.3.0
     restart: on-failure
     healthcheck:
-      test: [ "CMD", "java", "-cp", "dsf_status_client.jar", "dev.dsf.common.status.client.StatusClient" ]
+      test: [ "CMD-SHELL", "./healthcheck.sh" ]
       interval: 10s
       timeout: 15s
       retries: 5
@@ -208,7 +208,6 @@ services:
       DEV_DSF_BPE_DB_USER_USERNAME: zars_bpe_server_user
       DEV_DSF_BPE_DB_USER_CAMUNDA_GROUP: zars_camunda_users
       DEV_DSF_BPE_DB_USER_CAMUNDA_USERNAME: zars_camunda_server_user
-      DEV_DSF_BPE_FHIR_SERVER_ORGANIZATION_IDENTIFIER_VALUE: Test_ZARS
       DEV_DSF_BPE_FHIR_SERVER_BASE_URL: https://zars/fhir
     networks:
       zars-bpe-frontend:
@@ -224,10 +223,10 @@ services:
 
   # ---- DIC-1 - FHIR ---------------------------------------------------------
   dic-1-fhir-app:
-    image: ghcr.io/datasharingframework/fhir:1.1.0
+    image: ghcr.io/datasharingframework/fhir:1.3.0
     restart: on-failure
     healthcheck:
-      test: [ "CMD", "java", "-cp", "dsf_status_client.jar", "dev.dsf.common.status.client.StatusClient" ]
+      test: [ "CMD-SHELL", "./healthcheck.sh" ]
       interval: 10s
       timeout: 15s
       retries: 5
@@ -290,10 +289,10 @@ services:
 
   # ---- DIC-1 - BPE ----------------------------------------------------------
   dic-1-bpe-app:
-    image: ghcr.io/datasharingframework/bpe:1.1.0
+    image: ghcr.io/datasharingframework/bpe:1.3.0
     restart: on-failure
     healthcheck:
-      test: [ "CMD", "java", "-cp", "dsf_status_client.jar", "dev.dsf.common.status.client.StatusClient" ]
+      test: [ "CMD-SHELL", "./healthcheck.sh" ]
       interval: 10s
       timeout: 15s
       retries: 5
@@ -335,7 +334,6 @@ services:
       DEV_DSF_BPE_DB_USER_USERNAME: dic_1_bpe_server_user
       DEV_DSF_BPE_DB_USER_CAMUNDA_GROUP: dic_1_camunda_users
       DEV_DSF_BPE_DB_USER_CAMUNDA_USERNAME: dic_1_camunda_server_user
-      DEV_DSF_BPE_FHIR_SERVER_ORGANIZATION_IDENTIFIER_VALUE: Test_DIC_1
       DEV_DSF_BPE_FHIR_SERVER_BASE_URL: https://dic-1/fhir
       DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_CLIENT_FLARE_BASE_URL: http://dic-1-store:8080/
       DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_CLIENT_FLARE_TIMEOUT_CONNECT: 2000
@@ -421,10 +419,10 @@ services:
 
   # ---- DIC-2 - FHIR ---------------------------------------------------------
   dic-2-fhir-app:
-    image: ghcr.io/datasharingframework/fhir:1.1.0
+    image: ghcr.io/datasharingframework/fhir:1.3.0
     restart: on-failure
     healthcheck:
-      test: [ "CMD", "java", "-cp", "dsf_status_client.jar", "dev.dsf.common.status.client.StatusClient" ]
+      test: [ "CMD-SHELL", "./healthcheck.sh" ]
       interval: 10s
       timeout: 15s
       retries: 5
@@ -487,10 +485,10 @@ services:
 
   # ---- DIC-2 - BPE ----------------------------------------------------------
   dic-2-bpe-app:
-    image: ghcr.io/datasharingframework/bpe:1.1.0
+    image: ghcr.io/datasharingframework/bpe:1.3.0
     restart: on-failure
     healthcheck:
-      test: [ "CMD", "java", "-cp", "dsf_status_client.jar", "dev.dsf.common.status.client.StatusClient" ]
+      test: [ "CMD-SHELL", "./healthcheck.sh" ]
       interval: 10s
       timeout: 15s
       retries: 5
@@ -532,7 +530,6 @@ services:
       DEV_DSF_BPE_DB_USER_USERNAME: dic_2_bpe_server_user
       DEV_DSF_BPE_DB_USER_CAMUNDA_GROUP: dic_2_camunda_users
       DEV_DSF_BPE_DB_USER_CAMUNDA_USERNAME: dic_2_camunda_server_user
-      DEV_DSF_BPE_FHIR_SERVER_ORGANIZATION_IDENTIFIER_VALUE: Test_DIC_2
       DEV_DSF_BPE_FHIR_SERVER_BASE_URL: https://dic-2/fhir
       DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_CLIENT_STORE_BASE_URL: http://dic-2-store:8080/fhir
       DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_EVALUATION_STRATEGY: cql
@@ -572,10 +569,10 @@ services:
 
   # ---- DIC-3 - FHIR ---------------------------------------------------------
   dic-3-fhir-app:
-    image: ghcr.io/datasharingframework/fhir:1.1.0
+    image: ghcr.io/datasharingframework/fhir:1.3.0
     restart: on-failure
     healthcheck:
-      test: [ "CMD", "java", "-cp", "dsf_status_client.jar", "dev.dsf.common.status.client.StatusClient" ]
+      test: [ "CMD-SHELL", "./healthcheck.sh" ]
       interval: 10s
       timeout: 15s
       retries: 5
@@ -634,10 +631,10 @@ services:
 
   # ---- DIC-3 - BPE ----------------------------------------------------------
   dic-3-bpe-app:
-    image: ghcr.io/datasharingframework/bpe:1.1.0
+    image: ghcr.io/datasharingframework/bpe:1.3.0
     restart: on-failure
     healthcheck:
-      test: [ "CMD", "java", "-cp", "dsf_status_client.jar", "dev.dsf.common.status.client.StatusClient" ]
+      test: [ "CMD-SHELL", "./healthcheck.sh" ]
       interval: 10s
       timeout: 15s
       retries: 5
@@ -680,7 +677,6 @@ services:
       DEV_DSF_BPE_DB_USER_USERNAME: dic_3_bpe_server_user
       DEV_DSF_BPE_DB_USER_CAMUNDA_GROUP: dic_3_camunda_users
       DEV_DSF_BPE_DB_USER_CAMUNDA_USERNAME: dic_3_camunda_server_user
-      DEV_DSF_BPE_FHIR_SERVER_ORGANIZATION_IDENTIFIER_VALUE: Test_DIC_3
       DEV_DSF_BPE_FHIR_SERVER_BASE_URL: https://dic-3/fhir
       DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_CLIENT_STORE_TRUST_STORE_PATH: /run/secrets/dic_3_store_proxy_self_signed_ca.p12
       DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_CLIENT_STORE_TRUST_STORE_PASSWORD: "testpw"
@@ -755,10 +751,10 @@ services:
 
   # ---- DIC-4 - FHIR ---------------------------------------------------------
   dic-4-fhir-app:
-    image: ghcr.io/datasharingframework/fhir:1.1.0
+    image: ghcr.io/datasharingframework/fhir:1.3.0
     restart: on-failure
     healthcheck:
-      test: [ "CMD", "java", "-cp", "dsf_status_client.jar", "dev.dsf.common.status.client.StatusClient" ]
+      test: [ "CMD-SHELL", "./healthcheck.sh" ]
       interval: 10s
       timeout: 15s
       retries: 5
@@ -817,10 +813,10 @@ services:
 
   # ---- DIC-4 - BPE ----------------------------------------------------------
   dic-4-bpe-app:
-    image: ghcr.io/datasharingframework/bpe:1.1.0
+    image: ghcr.io/datasharingframework/bpe:1.3.0
     restart: on-failure
     healthcheck:
-      test: [ "CMD", "java", "-cp", "dsf_status_client.jar", "dev.dsf.common.status.client.StatusClient" ]
+      test: [ "CMD-SHELL", "./healthcheck.sh" ]
       interval: 10s
       timeout: 15s
       retries: 5
@@ -862,7 +858,6 @@ services:
       DEV_DSF_BPE_DB_USER_USERNAME: dic_4_bpe_server_user
       DEV_DSF_BPE_DB_USER_CAMUNDA_GROUP: dic_4_camunda_users
       DEV_DSF_BPE_DB_USER_CAMUNDA_USERNAME: dic_4_camunda_server_user
-      DEV_DSF_BPE_FHIR_SERVER_ORGANIZATION_IDENTIFIER_VALUE: Test_DIC_4
       DEV_DSF_BPE_FHIR_SERVER_BASE_URL: https://dic-4/fhir
       DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_CLIENT_STORE_BASE_URL: http://dic-4-store:8080/fhir
       DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_EVALUATION_STRATEGY: cql
