Fix nginx Warning Message

--- a/feasibility-dsf-process-docker-test-setup/dic-3-store-proxy/nginx.conf
+++ b/feasibility-dsf-process-docker-test-setup/dic-3-store-proxy/nginx.conf
@@ -28,8 +28,9 @@ http {
     add_header Strict-Transport-Security "max-age=63072000" always;
 
     server {
-        listen 443 ssl http2;
-        listen [::]:443 ssl http2;
+        listen 443 ssl;
+        listen [::]:443 ssl;
+        http2 on;
 
         location / {
             auth_basic "dic_3_store_auth";
