Create and Upload SHA-256 Checksum of Build Artifact

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,6 +94,8 @@ jobs:
     - name: Release
       uses: softprops/action-gh-release@v1
       with:
-        files: feasibility-dsf-process/target/feasibility-dsf-process-*.jar
+        files: |
+          feasibility-dsf-process/target/feasibility-dsf-process-*.jar
+          feasibility-dsf-process/target/feasibility-dsf-process-*.jar.sha256
         name: "Feasibility DSF Process - v${{ steps.prep.outputs.version }}"
 
