--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,11 @@
                     <artifactId>maven-clean-plugin</artifactId>
                     <version>3.3.1</version>
                 </plugin>
+                <plugin>
+                    <groupId>net.nicoulaj.maven.plugins</groupId>
+                    <artifactId>checksum-maven-plugin</artifactId>
+                    <version>1.10</version>
+                </plugin>
             </plugins>
         </pluginManagement>
 
