First commit after distribution.

--- a/mii-process-feasibility-docker-test-setup/docker-compose.yml
+++ b/mii-process-feasibility-docker-test-setup/docker-compose.yml
@@ -319,7 +319,14 @@ services:
     - type: bind
       source: ./dic-1/bpe/cache
       target: /opt/bpe/cache
+
+    ports:
+      - 5005:5005
     environment:
+      EXTRA_JVM_ARGS: -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005
+      DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_FEASIBILITY_DISTRIBUTION: "true"
+      DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_FEASIBILITY_ORGANIZATION_IDENTIFIER_VALUE: "distributed-org.de"
+
       TZ: Europe/Berlin
       DEV_DSF_SERVER_AUTH_TRUST_CLIENT_CERTIFICATE_CAS: /run/secrets/app_client_trust_certificates.pem
       DEV_DSF_BPE_DB_LIQUIBASE_PASSWORD_FILE: /run/secrets/db_liquibase.password
@@ -885,6 +892,9 @@ services:
         condition: service_healthy
       dic-4-store-init:
         condition: service_completed_successfully
+
+  #dic-4-bpe-app: todo
+
 
   # ---- DIC-4 - FHIR Data Store ----------------------------------------------
   dic-4-store:
